# text2sql-eval-toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  env.example  pyproject.toml  requirements.txt
.github/: dco.yml
data/: benchmarks.json  test-benchmarks.json
data/benchmarks/: README.md  archer-schema.json  archer_en_dev.json  archer_en_train.json  beaver-original.json  beaver-schema.json  beaver.json  bird_mini_dev_postgres-schema.json  bird_mini_dev_postgres.json  bird_mini_dev_sqlite-schema.json  bird_mini_dev_sqlite.json  spider-dev-converted.json  spider-dev-schema.json  spider-realistic.json
data/results/: README.md  archer_en_dev-predictions_eval_errors.md  archer_en_dev-predictions_eval_summary.csv  archer_en_dev-predictions_eval_summary.json  archer_en_dev-predictions_eval_summary.md  beaver-predictions_eval_summary.csv  beaver-predictions_eval_summary.json  beaver-predictions_eval_summary.md  bird_mini_dev_postgres-predictions_eval_errors.md  bird_mini_dev_postgres-predictions_eval_summary.csv  bird_mini_dev_postgres-predictions_eval_summary.json  bird_mini_dev_postgres-predictions_eval_summary.md  bird_mini_dev_sqlite-predictions_eval_errors.md  bird_mini_dev_sqlite-predictions_eval_summary.csv  bird_mini_dev_sqlite-predictions_eval_summary.json  (+9 more)
notebooks/: inference_tests.ipynb  llm_judge_comparison.ipynb  results_analysis.ipynb  text2sql_error_analysis.ipynb
scripts/: run_all_benchmarks.py  run_experiment.py
tests/: test_inference_tools.py  test_run_experiment_behavior.py  test_run_experiment_integration.py  test_sql_analysis.py
(+82 files in other folders)
