[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text2sql-eval-toolkit"
version = "1.0.0"
description = "A toolkit for evaluating text-to-SQL pipelines"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [
    { name = "Oktie Hassanzadeh", email = "lastname@us.ibm.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "ibm_watsonx_ai>=1.3.30",
    "pandas>=2.2.3",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "sqlparse>=0.5.3",
    "unitxt>=1.26.1",
    "psycopg2-binary>=2.9.10",
    "sqlglot>=27.0.0",
    "asyncpg>=0.30.0",
    "setuptools>=77.0.3",
    "loguru>=0.7.3",
    "func-timeout>=4.3.5",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.5",
    "python-dotenv>=1.1.1",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
db2 = [
  "ibm-db>=3.2.6",
  "ibm-db-sa>=0.4.0",  # SQLAlchemy variant
  "sqlalchemy>=2.0"    # idem
]
mysql = [
  "pymysql>=1.1.1",
  "aiomysql>=0.2.0",
  "greenlet>=3.0.0",
  "cryptography>=45.0.6"
]
presto = [
  "pyhive>=0.7.0",
  "presto-python-client>=0.8.4"
]
notebook = [
  "jupyter>=1.0.0",
  "nbconvert>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/IBM/text2sql-eval-toolkit"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
